--- a/style.css
+++ b/style.css
@@ -36,17 +36,11 @@ body{
     margin: 0 0 calc(105px - 0.03666833538 * 50vw) 0;
     font-family:  'Avenir Next', sans-serif, 'Hind Vadodara';
     min-height: calc(100vh - (210px - 0.03666833538 * 100vw));
+    overflow-x: hidden;
 }
-body:before{
-    content:"";
-    position: fixed;
-    width: calc(50vw + 50vh);
-    height: 100vh;
-    background-color: rgb(247, 247, 247);
-    left:-50vh;
-    top:0;
-    transform: skewX(45deg);
 
+em{
+    font-style: normal;
 }
 /*
     header and footer wrappers
@@ -54,25 +48,28 @@ body:before{
 header, footer{
     position: fixed;
     transform: skewY(-2.1deg);
-    overflow: hidden;
+
     width: 100vw;
     height: 105px;
     z-index: 10;
-    opacity: .9;
     filter: drop-shadow(0px 0px 4px rgba(0,0,0,.2));
 }
 header{
-    background-color: #FEBE10;
+    /*background-color: #febe10;*/
+    background-color: rgba(254, 190, 16, .5);
+    backdrop-filter: blur(10px);
     top: calc(-0.03666833538 * 50vw);
 }
 footer{
-    background-color: #53699D;
+    /*background-color: #53699D;*/
+    background-color: #53699d;
+    background-color: rgba(83, 105, 157, .5);
     bottom: calc(-0.03666833538 * 50vw);
 }
 /*
     header and footer liners
  */
-nav{
+nav, .contactDetails{
     position: fixed;
     width: 100vw;
     height: 80px;
@@ -82,7 +79,7 @@ nav{
 header nav{
     top:calc(0.03666833538 * 50vw);
 }
-footer nav{
+footer .contactDetails{
     bottom: calc(0.03666833538 * 50vw);
 }
 
@@ -105,11 +102,10 @@ header nav label{
     text-decoration: none;
     color: #53699D;
     display: inline-block;
-    transform: rotate(-1.4deg);
     vertical-align: top;
     transition: transform .2s, color .2s, font-size .2s, transform .2s, padding .2s;
     line-height: 28px;
-
+    cursor: pointer;
 }
 header nav label:first-of-type{
     transform: rotate(0deg);
@@ -117,40 +113,20 @@ header nav label:first-of-type{
 header nav label:hover, input:checked + label {
     color: #FEBE10;
 }
-header nav label:not(:first-of-type):hover::before{
-    content: "";
-    display: block;
-    width: 100%;
-    height: 80px;
+
+header nav label:not(:first-of-type){
+    padding: 26px 20px 26px 20px;
+}
+header nav label:not(:first-of-type):hover{
     background: rgba(0,0,0,0.1);
-    position: absolute;
-    left:0;
-    top:0;
-    transform: rotate(1.4deg);
-    z-index: -1;
-}
-header nav label:nth-of-type(2){
-    padding: 45px 20px 17px 20px;
-}
-header nav label:nth-of-type(3){
-    padding: 40px 20px 17px 20px;
-}
-header nav label:nth-of-type(4){
-    padding: 30px 20px 22px 20px;
-}
-header nav label:nth-of-type(5){
-    padding: 25px 20px 22px 20px;
-}
-header nav label:nth-of-type(6){
-    padding: 20px 20px 23px 20px;
 }
 
-footer nav, #contact nav{
+footer .contactDetails{
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-evenly;
 }
-nav div{
+.contactDetails div{
     display: flex;
     color: #828282;
     justify-content: center;
@@ -163,24 +139,24 @@ nav div{
     max-width: 250px;
 
 }
-nav div a{
+.contactDetails div a{
     color: #828282;
     text-decoration: none;
 }
-nav div a:hover{
+.contactDetails div a:hover{
     color: #444444;
     text-decoration: underline;
 }
-nav div.mail:before{
+.contactDetails div.mail:before{
     background: url("img/icons/mail.png");
 }
-nav div.map:before{
+.contactDetails div.map:before{
     background: url("img/icons/map.png");
 }
-nav div.tel:before{
+.contactDetails div.tel:before{
     background: url("img/icons/cel.png");
 }
-nav div.mail:before, nav div.map:before, nav div.tel:before{
+.contactDetails div.mail:before, .contactDetails div.map:before, .contactDetails div.tel:before{
     content:"";
     width: 30px;
     height: 30px;
@@ -192,7 +168,7 @@ nav div.mail:before, nav div.map:before, nav div.tel:before{
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
-nav div span{
+.contactDetails div span{
     display:block;
 }
 
@@ -202,12 +178,11 @@ nav div span{
 
 section{
     width:100vw;
-    transform: skewY(-2.1deg);
     text-align: center;
     box-sizing: border-box;
     display:none;
-    min-height: calc(100vh - (210px - 0.03666833538 * 100vw));
-    padding-top:calc(105px - 0.03666833538 * 50vw);
+    min-height: calc( 100vh - 80px);
+    padding-top: 80px;
 }
 section#over-ons{
     display: flex;
@@ -320,6 +295,7 @@ p em{
     width: calc(100vw - 1000px);
     background: url("img/IMG_3624.jpeg") left center;
     background-size: cover;
+    border-radius: 7px;
 }
 
 
@@ -338,7 +314,7 @@ p em{
     align-self: center;
     flex: 0;
 }
-#contact nav{
+#contact .contactDetails{
     position: initial;
     width: 50vw;
     height: initial;
@@ -349,7 +325,7 @@ p em{
     align-content: center;
     flex-wrap: wrap;
 }
-#contact nav div{
+#contact .contactDetails div{
     display: inline-flex;
     min-width: 250px;
 }
@@ -411,6 +387,8 @@ p em{
 #partners a{
     text-decoration: none;
 }
+
+
 @media screen and (max-width: 1440px) {
     #over-ons{
         display: flex;
@@ -440,7 +418,7 @@ p em{
         margin: 15px 20px;
         line-height: 25px;
     }
-    footer nav div.tel {
+    footer .contactDetails div.tel {
         width: 22vw;
     }
     #over-ons .text{
@@ -471,14 +449,14 @@ p em{
         height: calc(240px + 0.03666833538 * 50vw);
         overflow: initial;
     }
-    footer nav{
+    footer .contactDetails{
         height: 240px;
         display:block;
         flex-direction: initial;
         justify-content: initial;
         top:calc(0.03666833538 * 50vw);
     }
-    footer nav div{
+    footer .contactDetails div{
         width: 220px;
         display:flex;
         max-width: initial;
@@ -500,7 +478,7 @@ p em{
     #contact form label {
         width: calc(100vw - 40px);
     }
-    #contact nav{
+    #contact .contactDetails{
         width: 100vw;
     }
 
@@ -549,7 +527,7 @@ p em{
         top: calc(-0.03666833538 * 50vw);
         height: calc(0.03666833538 * 50vw);
     }
-    footer nav{
+    footer .contactDetails{
         display: none;
     }
     header nav{
@@ -614,13 +592,10 @@ p em{
         font-size: 12px;
     }
 }
-/* (hover: none) and (pointer: coarse) */
+
 @media (prefers-color-scheme: dark) {
     html,body{
         background: #2B2B2B;
-    }
-    body:before{
-        background: #313335;
     }
     p{
         color: #bcbcbc;
@@ -628,7 +603,7 @@ p em{
     h1{
         color:#516591;
     }
-    nav{
+    nav, .contactDetails{
         background: #3C3F41;
     }
     #realisaties img, #realisaties .picture:hover .before{
@@ -643,7 +618,7 @@ p em{
         filter: drop-shadow(0px 0px 8px rgba(255, 255, 255, .1));
         opacity: .7;
     }
-    nav div a:hover{
+    .contactDetails div a:hover{
         color: #b1b1b1;
         text-decoration: underline;
     }
